[package]
name = "gold"
description = "Redis-like database made with Rust."
version = "0.1.0"
homepage = "https://github.com/minsk-dev/gold"
repository = "https://github.com/minsk-dev/gold"
license = "BSD-3-Clause"
license-file = "LICENSE"
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml"
]
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"]  }
json = "0.12.4"
async-recursion = "1.0.0"