[package]
name = "gold-db"
authors = ["Alex Andrade Albuquerque <pauloalbuquerque@acm.org>"]
description = "Redis-like database made with Rust."
version = "0.1.1"
homepage = "https://github.com/minsk-dev/gold"
repository = "https://github.com/minsk-dev/gold"
license-file = "LICENSE"
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml"
]
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"]  }
json = "0.12.4"
async-recursion = "1.0.0"